Sommer/Winterzeit eingebaut

--- a/sources/templates/swactions.html
+++ b/sources/templates/swactions.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="footer">
-        <p>Switcher 3 Application (Adjust: {{adj_info}})
+        <p>Switcher 3 Application (Schaltzeiten ajustieren: {{adj_info}})
         </p>
     </div>
 
